# Smart-Offline-Document-Summarization

./: README.md  app.py  pyproject.toml  replit.md  requirements.txt
core/: document_processor.py  keyword_extractor.py  preprocessor.py  summarizer.py  text_extractor.py
sample_DS/: text1.txt  text2.txt  text3.txt
utils/: file_handler.py  text_highlighter.py
